--- a/MyFirstAndroidApp/res/drawable-xxhdpi/layout/activity_sub.xml
+++ b/MyFirstAndroidApp/res/drawable-xxhdpi/layout/activity_sub.xml
@@ -1,4 +1,4 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SecondActivity" >
-    
-<RelativeLayout 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/layout_bg"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-     >
 
     <TableLayout
         android:id="@+id/tableLayout1"
@@ -338,29 +328,52 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tableLayout2"
         android:layout_below="@+id/tableLayout2"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:text="Hole"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@android:color/white" />
-    
-    <kankan.wheel.widget.WheelView android:id="@+id/HoleSelection"
-        android:layout_height="70dp"
-        android:layout_width="70dp"
-        android:layout_gravity="center_vertical"
+
+    <EditText
+        android:id="@+id/HoleSelection"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/textView4"
-        android:layout_marginLeft="10dp"
-        android:layout_below="@+id/tableLayout2"
-        android:layout_marginTop="10dp"      
-        android:layout_weight="1"/>
+        android:background="@android:color/white"
+        android:ems="10"
+        android:inputType="number" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/goHomeButton"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_alignRight="@+id/tableLayout1"
+        android:layout_alignTop="@+id/updateHoleButton"
+        android:background="@android:color/white"
+        android:text="Home" 
+        />
+
+    <Button
+        android:id="@+id/updateHoleButton"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_marginRight="14dp"
+        android:layout_toLeftOf="@+id/goHomeButton"
+        android:background="@android:color/white"
+        android:text="Update" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/goHomeButton"
         android:layout_alignTop="@+id/tableLayout2"
-        android:layout_toLeftOf="@+id/tableLayout2"
         android:text="Carried holes"
-        android:layout_alignParentRight="true"
         android:background="@android:color/black"
         android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -370,34 +383,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView5"
-        android:layout_alignParentRight="true"
-        
+        android:layout_toRightOf="@+id/updateHoleButton"
         android:text="0"
         android:background="@android:color/black"
         android:textColor="@android:color/white"
         
         android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <Button
-        android:id="@+id/updateHoleButton"
-        style="@style/btnStyleBeige"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_alignTop="@+id/HoleSelection"
-        android:layout_toLeftOf="@+id/HoleSelection"
-        android:layout_alignParentRight="true"
-        android:text="Update" />
-
-    <ImageButton
-        android:id="@+id/goHomeButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/updateHoleButton"
-        android:layout_marginTop="5dp"
-        android:layout_alignRight="@+id/updateHoleButton"
-        android:layout_alignParentBottom="true"
-        style="@style/btnStyleBeige"
-        android:src="@android:drawable/ic_menu_revert" />
+    
 
 </RelativeLayout>
-</ScrollView>
