--- a/MyFirstAndroidApp/res/layout/activity_game.xml
+++ b/MyFirstAndroidApp/res/layout/activity_game.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SecondActivity" >
+    tools:context=".GameActivity" >
     
 <RelativeLayout 
     android:layout_width="wrap_content"
@@ -42,22 +42,29 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#000000"
+                android:textColor="#FFFFF0"
+                android:enabled="false"
+                android:focusable="false"
                 android:padding="5dp"
                 android:text="Player"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:textSize="20sp"
                 android:padding="5dp"
-                android:text="balance"
+                android:text="Total"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:background="#000000"
+                android:textColor="#FFFFF0"
+                android:enabled="false"
+                android:focusable="false"
+				>
             </TextView>
 
             <TextView
@@ -65,11 +72,14 @@
                 android:layout_width="70dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:textSize="20sp"
                 android:padding="5dp"
+                android:background="#000000"
+                android:textColor="#FFFFF0"
                 android:text="score"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:enabled="false"
+                android:focusable="false">
             </TextView>
         </TableRow>
 
@@ -87,36 +97,30 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/player1BalanceView"
+                android:id="@+id/player1TotalView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:textColor="@android:color/black" >
             </TextView>
 
-            <EditText
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/player1ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip"
-                android:background="@android:color/black"
-                android:padding="5dp"
-                android:text="0"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" 
-                android:inputType="number">
-            </EditText>
+                android:layout_margin="2dip">
+            </kankan.wheel.widget.WheelView>
         </TableRow>
 
         <TableRow
@@ -133,36 +137,30 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/player2BalanceView"
+                android:id="@+id/player2TotalView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:textColor="@android:color/black" >
             </TextView>
 
-            <EditText
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/player2ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip"
-                android:background="@android:color/black"
-                android:padding="5dp"
-                android:text="0"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white"
-                android:inputType="number" >
-            </EditText>
+                android:layout_margin="2dip">
+            </kankan.wheel.widget.WheelView>
         </TableRow>
 
         <TableRow
@@ -179,36 +177,30 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/player3BalanceView"
+                android:id="@+id/player3TotalView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:textColor="@android:color/black" >
             </TextView>
 
-            <EditText
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/player3ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip"
-                android:background="@android:color/black"
-                android:padding="5dp"
-                android:text="0"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" 
-                android:inputType="number">
-            </EditText>
+                android:layout_margin="2dip">
+            </kankan.wheel.widget.WheelView>
         </TableRow>
 
         <TableRow
@@ -225,36 +217,30 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/black" />
 
             <TextView
-                android:id="@+id/player4BalanceView"
+                android:id="@+id/player4TotalView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:textColor="@android:color/black" >
             </TextView>
 
-            <EditText
+            <kankan.wheel.widget.WheelView
                 android:id="@+id/player4ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip"
-                android:background="@android:color/black"
-                android:padding="5dp"
-                android:text="0"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" 
-                android:inputType="number">
-            </EditText>
+                android:layout_margin="2dip">
+            </kankan.wheel.widget.WheelView>
         </TableRow>
     </TableLayout>
 
@@ -279,11 +265,15 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:textSize="20sp"
                 android:padding="5dp"
                 android:text="Team A"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:background="#000000"
+                android:textColor="#FFFFF0"
+                android:enabled="false"
+                android:focusable="false" 
+                >
             </TextView>
 
             <TextView
@@ -291,11 +281,14 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:textSize="20sp"
                 android:padding="5dp"
                 android:text="Team B"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:background="#000000"
+                android:textColor="#FFFFF0" 
+                android:enabled="false"
+                android:focusable="false">
             </TextView>
         </TableRow>
 
@@ -311,11 +304,13 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:textColor="@android:color/black" 
+                android:enabled="false"
+                android:focusable="false">
             </EditText>
 
             <EditText
@@ -323,11 +318,13 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="@android:color/black"
+                android:background="#f2f2f2"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" >
+                android:textColor="@android:color/black" 
+                android:enabled="false"
+                android:focusable="false">
             </EditText>
         </TableRow>
     </TableLayout>
