--- a/MyFirstAndroidApp/res/drawable-ldpi/drawable-xxhdpi/layout/activity_new_sub.xml
+++ b/MyFirstAndroidApp/res/drawable-ldpi/drawable-xxhdpi/layout/activity_new_sub.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".GameActivity" >
+    tools:context=".SecondActivity" >
     
 <RelativeLayout 
     android:layout_width="wrap_content"
@@ -42,29 +42,22 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="#000000"
-                android:textColor="#FFFFF0"
-                android:enabled="false"
-                android:focusable="false"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="Player"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="20sp" />
+                android:textColor="@android:color/white" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:textSize="20sp"
+                android:background="@android:color/black"
                 android:padding="5dp"
-                android:text="Total"
+                android:text="balance"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:background="#000000"
-                android:textColor="#FFFFF0"
-                android:enabled="false"
-                android:focusable="false"
-				>
+                android:textColor="@android:color/white" >
             </TextView>
 
             <TextView
@@ -72,14 +65,11 @@
                 android:layout_width="70dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:textSize="20sp"
+                android:background="@android:color/black"
                 android:padding="5dp"
-                android:background="#000000"
-                android:textColor="#FFFFF0"
                 android:text="score"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:enabled="false"
-                android:focusable="false">
+                android:textColor="@android:color/white" >
             </TextView>
         </TableRow>
 
@@ -97,30 +87,36 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/white" />
 
             <TextView
-                android:id="@+id/player1TotalView"
+                android:id="@+id/player1BalanceView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" >
+                android:textColor="@android:color/white" >
             </TextView>
 
-            <kankan.wheel.widget.WheelView
+            <EditText
                 android:id="@+id/player1ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip">
-            </kankan.wheel.widget.WheelView>
+                android:layout_margin="2dip"
+                android:background="@android:color/black"
+                android:padding="5dp"
+                android:text="0"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@android:color/white" 
+                android:inputType="number">
+            </EditText>
         </TableRow>
 
         <TableRow
@@ -137,30 +133,36 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/white" />
 
             <TextView
-                android:id="@+id/player2TotalView"
+                android:id="@+id/player2BalanceView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" >
+                android:textColor="@android:color/white" >
             </TextView>
 
-            <kankan.wheel.widget.WheelView
+            <EditText
                 android:id="@+id/player2ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip">
-            </kankan.wheel.widget.WheelView>
+                android:layout_margin="2dip"
+                android:background="@android:color/black"
+                android:padding="5dp"
+                android:text="0"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@android:color/white"
+                android:inputType="number" >
+            </EditText>
         </TableRow>
 
         <TableRow
@@ -177,30 +179,36 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/white" />
 
             <TextView
-                android:id="@+id/player3TotalView"
+                android:id="@+id/player3BalanceView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" >
+                android:textColor="@android:color/white" >
             </TextView>
 
-            <kankan.wheel.widget.WheelView
+            <EditText
                 android:id="@+id/player3ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip">
-            </kankan.wheel.widget.WheelView>
+                android:layout_margin="2dip"
+                android:background="@android:color/black"
+                android:padding="5dp"
+                android:text="0"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@android:color/white" 
+                android:inputType="number">
+            </EditText>
         </TableRow>
 
         <TableRow
@@ -217,30 +225,36 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignTop="@+id/tableLayout1"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/white" />
 
             <TextView
-                android:id="@+id/player4TotalView"
+                android:id="@+id/player4BalanceView"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" >
+                android:textColor="@android:color/white" >
             </TextView>
 
-            <kankan.wheel.widget.WheelView
+            <EditText
                 android:id="@+id/player4ScoreView"
                 android:layout_width="60dp"
                 android:layout_height="40dp"
-                android:layout_margin="2dip">
-            </kankan.wheel.widget.WheelView>
+                android:layout_margin="2dip"
+                android:background="@android:color/black"
+                android:padding="5dp"
+                android:text="0"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@android:color/white" 
+                android:inputType="number">
+            </EditText>
         </TableRow>
     </TableLayout>
 
@@ -265,15 +279,11 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:textSize="20sp"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="Team A"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:background="#000000"
-                android:textColor="#FFFFF0"
-                android:enabled="false"
-                android:focusable="false" 
-                >
+                android:textColor="@android:color/white" >
             </TextView>
 
             <TextView
@@ -281,14 +291,11 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:textSize="20sp"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="Team B"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:background="#000000"
-                android:textColor="#FFFFF0" 
-                android:enabled="false"
-                android:focusable="false">
+                android:textColor="@android:color/white" >
             </TextView>
         </TableRow>
 
@@ -304,13 +311,11 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" 
-                android:enabled="false"
-                android:focusable="false">
+                android:textColor="@android:color/white" >
             </EditText>
 
             <EditText
@@ -318,13 +323,11 @@
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_margin="2dip"
-                android:background="#f2f2f2"
+                android:background="@android:color/black"
                 android:padding="5dp"
                 android:text="0"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/black" 
-                android:enabled="false"
-                android:focusable="false">
+                android:textColor="@android:color/white" >
             </EditText>
         </TableRow>
     </TableLayout>
@@ -395,52 +398,6 @@
         android:layout_alignParentBottom="true"
         style="@style/btnStyleBeige"
         android:src="@android:drawable/ic_menu_revert" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/goHomeButton"
-        android:layout_alignLeft="@+id/textView4"
-        android:text="Par"
-        android:background="@android:color/black"
-        android:textColor="#0000FF"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/holeTypeView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_toRightOf="@+id/textView6"
-        android:layout_marginLeft="10dp"
-        android:text="4"
-        android:background="@android:color/black"
-        android:textColor="#FF0000"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/goHomeButton"
-        android:layout_toRightOf="@+id/HoleSelection"
-        android:background="@android:color/black"
-        android:text="Yard"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#0000FF" />
-
-    <TextView
-        android:id="@+id/yardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/holeTypeView"
-        android:layout_alignBottom="@+id/holeTypeView"
-        android:layout_toLeftOf="@+id/textView7"
-        android:layout_marginRight="10dp"
-        android:text="380"
-        android:textColor="#FF0000"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
 </ScrollView>
