--- a/MyFirstAndroidApp/res/layout/activity_handi.xml
+++ b/MyFirstAndroidApp/res/layout/activity_handi.xml
@@ -1,4 +1,15 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/layout_bg"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".StatusActivity" >
+
+	<RelativeLayout 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:background="@drawable/layout_bg"
@@ -497,4 +508,5 @@
         android:layout_marginRight="14dp"
         android:text="Go back to game" />
 
-</RelativeLayout>
+	</RelativeLayout>
+</ScrollView>
