--- a/MyFirstAndroidApp/res/layout/activity_handi.xml
+++ b/MyFirstAndroidApp/res/layout/activity_handi.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StatusActivity" >
 
-	<RelativeLayout 
+	<RelativeLayout
+	android:id="@+id/activity_main_group" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:background="@drawable/layout_bg"
