--- a/MyFirstAndroidApp/res/layout/widgetlayout.xml
+++ b/MyFirstAndroidApp/res/layout/widgetlayout.xml
@@ -76,94 +76,68 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/white" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="60dp"
-        android:layout_height="30dp"
-        android:layout_alignTop="@+id/textView1"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"
-        android:text="Score"
-        android:padding="5dp"
-        android:background="@drawable/layout_bg"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
-
     <Button
         android:id="@+id/player1_score"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_alignRight="@+id/textView3"
+        android:layout_alignLeft="@+id/ScoreUpdate"
+        android:layout_alignRight="@+id/ScoreUpdate"
         android:layout_alignTop="@+id/teamA_player1"
         android:background="@drawable/layout_bg"
         android:padding="5dp"
         android:text="0"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
+        android:textColor="#FF00FF" />
     
     <Button
         android:id="@+id/player2_score"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignLeft="@+id/ScoreUpdate"
         android:layout_alignRight="@+id/player1_score"
         android:layout_alignTop="@+id/teamA_player2"
         android:background="@drawable/layout_bg"
         android:padding="5dp"
         android:text="0"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
+        android:textColor="#FF00FF" />
     
     <Button
         android:id="@+id/player3_score"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignLeft="@+id/ScoreUpdate"
         android:layout_alignRight="@+id/player2_score"
         android:layout_alignTop="@+id/teamB_player1"
         android:background="@drawable/layout_bg"
         android:padding="5dp"
         android:text="0"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
+        android:textColor="#FF00FF" />
     
     <Button
         android:id="@+id/player4_score"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignLeft="@+id/ScoreUpdate"
         android:layout_alignRight="@+id/player2_score"
         android:layout_alignTop="@+id/teamB_player2"
         android:background="@drawable/layout_bg"
         android:padding="5dp"
         android:text="0"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
-
-    <Button
-        android:id="@+id/UpdateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/player4_score"
-        android:layout_below="@+id/player4_score"
-        android:layout_marginTop="22dp"
-        android:background="@drawable/layout_bg"
-        android:text="Update"
-        android:gravity="top"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
+        android:textColor="#FF00FF" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/teamB_player2"
-        android:layout_alignTop="@+id/UpdateButton"
+        android:layout_alignTop="@+id/GetDistanceToGreen"
         android:text="Current Hole"
         android:textColor="@android:color/white"
         android:gravity="center"
@@ -171,7 +145,7 @@
 
     <TextView
         android:id="@+id/holeNumberView"
-        android:layout_width="30dp"
+        android:layout_width="50dp"
         android:layout_height="30dp"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
@@ -185,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/UpdateButton"
+        android:layout_below="@+id/GetDistanceToGreen"
         android:text="Team A"
         android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -202,17 +176,6 @@
         android:textColor="@android:color/white" />
 
     <TextView
-        android:id="@+id/teamA_Score"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignRight="@+id/holeNumberView"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_below="@+id/UpdateButton"
-        android:textColor="@android:color/white"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="0" />
-
-    <TextView
         android:id="@+id/teamB_Score"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -226,7 +189,7 @@
     <Button
         android:id="@+id/button1"
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="2dp"
         android:layout_alignLeft="@+id/teamB_player2"
         android:layout_below="@+id/teamB_player2"
@@ -237,13 +200,174 @@
     <Button
         android:id="@+id/button2"
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="2dp"
         android:layout_alignLeft="@+id/textView5"
         android:layout_below="@+id/textView5"
         android:layout_marginTop="10dp"
         android:text=""
         android:background="@android:color/white" />
-    
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_below="@+id/button2"
+        android:layout_marginTop="16dp"
+        android:text="Carried holes"
+        android:textColor="@android:color/white"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/NumOfCarriedHoles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_alignLeft="@+id/teamB_Score"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/ScoreUpdate"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/teamA_player1"
+        android:layout_toRightOf="@+id/holeNumberView"
+        android:background="@drawable/layout_bg"
+        android:padding="5dp"
+        android:text="Score"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/white" />
+
+    <Button
+        android:id="@+id/GetDistanceToGreen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/button2"
+        android:layout_below="@+id/button1"
+        android:background="@drawable/layout_bg"
+        android:gravity="top|center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="300"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#00FFFF" />
+
+    <TextView
+        android:id="@+id/SkinsWinPlayer1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/teamA_player2"
+        android:layout_alignRight="@+id/SkinsWinTitle"
+        android:background="@drawable/layout_bg"
+        android:padding="5dp"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FF00FF" />
+
+    <TextView
+        android:id="@+id/SkinsWinPlayer2"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/teamB_player1"
+        android:layout_alignRight="@+id/SkinsWinTitle"
+        android:background="@drawable/layout_bg"
+        android:padding="5dp"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FF00FF" />
+
+    <TextView
+        android:id="@+id/SkinsWinPlayer3"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/teamB_player2"
+        android:layout_alignRight="@+id/SkinsWinTitle"
+        android:background="@drawable/layout_bg"
+        android:padding="5dp"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FF00FF" />
+
+    <TextView
+        android:id="@+id/SkinsWinPlayer4"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/player4_score"
+        android:layout_alignTop="@+id/player4_score"
+        android:layout_alignRight="@+id/SkinsWinTitle"
+        android:background="@drawable/layout_bg"
+        android:padding="5dp"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FF00FF" />
+
+    <Button
+        android:id="@+id/SkinsWinTitle"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_above="@+id/teamA_player1"
+        android:layout_toRightOf="@+id/ScoreUpdate"
+        android:layout_marginLeft="3dp"
+        android:background="@drawable/layout_bg"
+        android:padding="5dp"
+        android:text="Wins"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/white" />
+
+    <TextView
+        android:id="@+id/ParTypeView"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/holeNumberView"
+        android:layout_alignBottom="@+id/holeNumberView"
+        android:layout_toRightOf="@+id/teamB_player2"
+        android:background="@drawable/layout_bg"
+        android:gravity="top|center_horizontal"
+        android:text="Par 4"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/teamA_Score"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignBaseline="@+id/textView4"
+        android:layout_alignBottom="@+id/textView4"
+        android:layout_alignLeft="@+id/holeNumberView"
+        android:text="0"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/white" />
+
+    <TextView
+        android:id="@+id/TextView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/TrackLastHit"
+        android:layout_below="@+id/GetDistanceToGreen"
+        android:gravity="center"
+        android:text="Track Hit"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@android:color/white" />
+
+    <TextView
+        android:id="@+id/TrackLastHit"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_alignLeft="@+id/player4_score"
+        android:layout_below="@+id/teamA_Score"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="18dp"
+        android:background="@drawable/layout_bg"
+        android:gravity="top|center_horizontal"
+        android:text="300"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#00FFFF" />
         
 </RelativeLayout>
