--- a/MyFirstAndroidApp/res/xml/widgetproviderinfo.xml
+++ b/MyFirstAndroidApp/res/xml/widgetproviderinfo.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android" 
   android:minWidth="220dp" 
   android:minHeight="200dp"
-  android:resizeMode="vertical"
+  android:resizeMode="vertical|horizontal"
   android:updatePeriodMillis="86400000" 
   android:initialLayout="@layout/widgetlayout"
   android:widgetCategory="keyguard|home_screen">
